update openapi config
